--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Personal Website</title>
-  </head>
+<html lang="en">
+<head>
+  <title>HTML Elements Reference</title>
+</head>
 <body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
