--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>My Personal Website</title>
+  <title>Krishnan Gosakan</title>
 </head>
 <body>
 </body>
