--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="shortcut icon" type="image/jpg" href="k.jpg">
+  <link rel="shortcut icon" type="image/x-icon" href="k.ico">
   <title>Krishnan Gosakan</title>
 </head>
 <body>
